--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
