--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "firebase": "^10.12.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
+    "redux-saga": "^1.3.0",
     "sass": "^1.74.1",
     "slick-carousel": "^1.8.1",
     "yet-another-react-lightbox": "^3.17.4"
