--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "firebase": "^10.12.0",
-    "next": "14.1.0",
+    "final-form": "^4.20.10",
+    "firebase": "^10.12.1",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-final-form": "^6.5.9",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
     "redux-saga": "^1.3.0",
