--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-saga": "^1.3.0",
     "sass": "^1.74.1",
     "slick-carousel": "^1.8.1",
+    "universal-cookie": "^7.1.4",
     "yet-another-react-lightbox": "^3.17.4"
   },
   "devDependencies": {
