--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-final-form": "^6.5.9",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
+    "react-web-share": "^2.0.2",
     "redux-saga": "^1.3.0",
     "sass": "^1.74.1",
     "slick-carousel": "^1.8.1",
